<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlashCards</string>
    <string name="tab_properties">Properties</string>
    <string name="tab_cards">Cards</string>
    <string name="menu_add_card">Add Card</string>
    <string name="menu_delete_card">Delete Card</string>
    <string name="menu_delete_cards">Delete Cards</string>
    <string name="menu_modify_card">Modify Card</string>
    <string name="menu_change_tags">Change Tags</string>
	<string name="menu_create_tag">Create Tag</string>
	<string name="menu_delete_tag">Delete Tag</string>
	<string name="menu_delete_tags">Delete Tags</string>
	<string name="menu_create">Create</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_done">Done</string>
    <string name="menu_discard">Discard Changes</string>
    <string name="menu_delete_deck">Delete Deck</string>
    <string name="menu_export_deck">Export Deck</string>
    <string name="menu_delete_decks">Delete Decks</string>
    <string name="menu_export_decks">Export Decks</string>
    <string name="menu_import_deck">Import Deck</string>
    <string name="menu_help">Help</string>
    <string name="menu_create_deck">Create Deck</string>
    <string name="menu_modify_deck">Modify Deck</string>
    <string name="menu_save_deck">Save</string>
    <string name="menu_save">Save</string>
    <string name="menu_next">Next</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_settings">Settings</string>
    <string name="button_create">Create Deck</string>
    <string name="button_list">List Decks</string>
    <string name="button_view">View Deck</string>
    <string name="deck_id">ID</string>
    <string name="deck_name">Deck Name</string>
    <string name="card_count">Cards</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="discard">Discard</string>
    <string name="done">Done</string>
    <string name="create_card_deck">Create New Deck</string>
    <string name="no_decks">There are no available decks. To create one, touch the plus sign in the action bar.</string>
    <string name="no_cards">This deck does not have any cards. To create one, touch Add Card on the options menu.</string>
    <string name="question">Question</string>
    <string name="hint">Hint</string>
    <string name="answer">Answer</string>
    <string name="explanation">Explanation</string>
    <string name="flip">Flip</string>
    <string name="show_answer">Show Answer</string>
    <string name="correct">Knew it!</string>
    <string name="guess">Guessed it</string>
    <string name="wrong">Missed it</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hint_title">Hint:</string>
    <string name="explanation_title">Explanation:</string>
    <string name="finish_title">Deck Complete!</string>
    <string name="finish_text">You have completed the deck. Touch OK to return to the FlashCard Application Launcher or touch Back to review cards.</string>
    <string name="summary_title">Scoring Summary</string>
    <string name="summary_intro">You have completed the deck. Here is a summary of how you did:</string>
	<string name="summary_correct">Correct Answers:</string>
	<string name="summary_guessed">Guessed Correctly:</string>
	<string name="summary_incorrect">Incorrect Answers:</string>
	<string name="summary_skipped">Skipped Cards:</string>
	<string name="button_ok">OK</string>
	<string name="question_hint">Type your question text here</string>
	<string name="hint_hint">The hint is optional</string>
	<string name="answer_hint">Type your answer text here</string>
	<string name="explanation_hint">The explanation is optional</string>
	<string name="tag">Tag</string>
	<string name="tags">Tags</string>
	<string name="name">Name</string>
	<string name="create_tag">Create Tag</string>
	<string name="new_tag">New Tag</string>
	<string name="tag_name">Tag Name</string>
	<string name="new_tag_entry">&lt;Create New Tag&gt;</string>
	<string name="error_missing_deck_name">No deck name specified!</string>
	<string name="error_duplicate_deck_name">A deck named \""%1$s\"" already exists! Please choose another name.</string>
	<string name="error_missing_question">Question cannot be left blank</string>
	<string name="error_missing_answer">Answer cannot be left blank</string>
	<string name="error_missing_tag">Empty Tag Name ignored.</string>
	<string name="status_card_saved">Card saved!</string>
	<string name="status_deck_saved">Deck saved!</string>
	<string name="hello">AndroidFileBrowserExampleActivity</string>
    <string name="example_app_name">Android File Browser Example</string>
    <string name="import_duplicate_format">A deck named \""%1$s\"" already exists in the database. The imported deck has been renamed as %2$s.</string>
    <string name="delete_deck_title">Confirm Delete Deck</string>
    <string name="delete_deck_format">Really delete deck %1$s? This operation cannot be undone!</string>
    <string name="delete_multiple_decks_format">Really delete %1$d decks? This operation cannot be undone!</string>
    <string name="delete_deck_ok">Delete</string>
    <string name="delete_deck_cancel">Cancel</string>
    <string name="delete_card_title">Confirm Delete Card</string>
    <string name="delete_card_format">Really delete this card? This operation cannot be undone!</string>
    <string name="delete_multicple_cards_title">Confirm Delete Cards</string>
    <string name="delete_multiple_cards_format">Really delete %1$d cards? This operation cannot be undone!</string>
    <string name="delete_card_ok">Delete</string>
    <string name="delete_card_cancel">Cancel</string>
    <string name="delete_tag_title">Confirm Delete Tag</string>
    <string name="delete_tag_format">Really delete this tag? This operation cannot be undone!</string>
    <string name="delete_multicple_tags_title">Confirm Delete Tags</string>
    <string name="delete_multiple_tags_format">Really delete %1$d tags? This operation cannot be undone!</string>
    <string name="delete_tag_ok">Delete</string>
    <string name="delete_tag_cancel">Cancel</string>
    <string name="viewer_no_cards_title">Empty Deck</string>
    <string name="viewer_no_cards_format">Deck \""%1$s\"" is empty! Add cards by selecting the deck\'s checkbox and choosing Modify Deck from the options menu.</string>
    <string name="viewer_taglist_title">Choose Tags</string>
    <string name="viewer_taglist_format">Deck \""%1$s\"" contains the following tags. Only cards matching the selected tags will be displayed.</string>
    <string name="viewer_no_matching_cards">No cards matched your selected tags. Try again.</string>
    <string name="viewer_show_all">Show All</string>
    <string name="viewer_show_selected">Show Selected</string>
    <string name="deck_exported_format">Deck \""%1$s\"" was successfully written to %2$s.</string>
    <string name="deck_not_exported_format">Deck \""%1$s\"" could not be written to %2$s.</string>
    <string name="pref_title_general">General</string>
    <string name="pref_title_viewer">Viewer</string>
    <string name="pref_title_viewer_hints">Enable Hints</string>
    <string name="pref_summary_viewer_hints">Allow entry of hints when editing cards and show hints when viewing questions</string>
    <string name="pref_title_viewer_explanations">Enable Explanations</string>
    <string name="pref_summary_viewer_explanations">Allow entry of explanations when editing cards and show explanations when viewing answers</string>
    <string name="pref_title_viewer_scoring">Enable scoring</string>
    <string name="pref_summary_viewer_scoring">Display scoring buttons on each answer screen</string>
   	<string name="pref_title_viewer_shuffle">Auto Shuffle</string>
  	<string name="pref_summary_viewer_shuffle">Always shuffle deck before viewing</string>
   	<string name="pref_title_developer">Developer Options</string>
  	<string name="pref_summary_developer">Click here to display developer options. Only change these if you absolutely know what you are doing!</string>
  	<string name="pref_title_enable_developer">Enable Developer Options</string>
  	<string name="pref_summary_enable_developer">Only change these if you absolutely know what you are doing!</string>
   	<string name="pref_title_delete_database">Delete Database</string>
  	<string name="pref_summary_delete_database">Click here to delete the database. Existing decks will not be deleted and may be re-added to the database by using the Import Deck feature.</string>
	<string name="pref_title_version">Application Version</string>
	<string name="pref_summary_version">Application Version</string>
	<string name="action_bar_title_export">Export Deck(s)</string>
	<string name="action_bar_title_import">Import Deck</string>
	<string name="action_bar_title_settings">Settings</string>
    <string name="action_bar_title_add_card">Add Card</string>
    <string name="action_bar_title_modify_card">Modify Card</string>
    <string name="action_bar_title_view">View Deck</string>
    <string name="action_bar_title_create_deck">Create Deck</string>
    <string name="action_bar_title_editor">Modify Deck</string>
    <string name="action_mode_title">Select Items</string>
    <string name="action_mode_one_selected">One item selected</string>
    <string name="action_mode_multiple_selected">%1$s items selected</string>
    
    <!-- Do not localize these strings. They are used by the FlashCardsPreferenceActivity
    	 to initialize the class constants used to store and retrieve preferences. -->
    <string name="pref_key_enable_scoring">EnableScoringPref</string>
    <string name="pref_key_enable_hints">EnableHintsPref</string>
    <string name="pref_key_enable_explanations">EnableExplanationsPref</string>
    <string name="pref_key_enable_auto_shuffle">EnableAutoShufflePref</string>
    <string name="pref_key_delete_database">DeleteDatabasePref</string>
    <string name="pref_key_enable_developer">EnableDeveloperPref</string>
    <string name="pref_key_version">VersionPref</string>
    	
</resources>
