<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.thehappypc.flashcards.FlashCardEditorActivity" >

    <item
        android:id="@+id/menu_save_deck"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_save_deck"
        android:title="@string/menu_save_deck"/>
    
    <item
        android:id="@+id/menu_create"
        android:orderInCategory="20"
        android:showAsAction="ifRoom"
        android:title="@string/menu_create"/>
    
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="30"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>
