<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/tagListEntryView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary_intro" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tagListEntryView"
        android:layout_below="@+id/tagListEntryView"
        android:layout_marginTop="10dp" >

        <TableRow
            android:id="@+id/correctRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/correctLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="3dp"
                android:text="@string/summary_correct" />

            <TextView
                android:id="@+id/correctValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="right" />
        </TableRow>

        <TableRow
            android:id="@+id/guessRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/guessLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="3dp"
                android:text="@string/summary_guessed" />

            <TextView
                android:id="@+id/guessValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="right" />
                
        </TableRow>

        <TableRow
            android:id="@+id/incorrectRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/incorrectLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="3dp"
                android:text="@string/summary_incorrect" />

            <TextView
                android:id="@+id/incorrectValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="right" />
        </TableRow>

        <TableRow
            android:id="@+id/skippedRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/skippedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="3dp"
                android:text="@string/summary_skipped" />

            <TextView
                android:id="@+id/skippedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="right" />
        </TableRow>
    </TableLayout>
    
</RelativeLayout>
